--- a/assets/styles/_reset.scss
+++ b/assets/styles/_reset.scss
@@ -60,9 +60,9 @@ picture {
 }
 
 /* Natural flow and rhythm in articles by default */
-article > * + * {
-	margin-top: 1em;
-}
+// article > * + * {
+// 	margin-top: 1em;
+// }
 
 /* Inherit fonts for inputs and buttons */
 input,
