--- a/assets/styles/_tokens.scss
+++ b/assets/styles/_tokens.scss
@@ -1,17 +1,19 @@
 :root {
-	--scale: 1.25;
-	/* Don't change the lines below, you only need to change the --scale above. */
-	--size-l-1: calc(1rem * var(--scale));
-	--size-l-2: calc(var(--size-l-1) * var(--scale));
-	--size-l-3: calc(var(--size-l-2) * var(--scale));
-	--size-l-4: calc(var(--size-l-3) * var(--scale));
-	--size-l-5: calc(var(--size-l-4) * var(--scale));
-	--size-s-1: calc(1rem / var(--scale));
-	--size-s-2: calc(var(--size-s-1) / var(--scale));
-	--size-s-3: calc(var(--size-s-2) / var(--scale));
+	--ratio: 1.25;
+	--s-5: calc(var(--s-4) / var(--ratio));
+	--s-4: calc(var(--s-3) / var(--ratio));
+	--s-3: calc(var(--s-2) / var(--ratio));
+	--s-2: calc(var(--s-1) / var(--ratio));
+	--s-1: calc(var(--s0) / var(--ratio));
+	--s0: 1rem;
+	--s1: calc(var(--s0) * var(--ratio));
+	--s2: calc(var(--s1) * var(--ratio));
+	--s3: calc(var(--s2) * var(--ratio));
+	--s4: calc(var(--s3) * var(--ratio));
+	--s5: calc(var(--s4) * var(--ratio));
 }
 
 html {
-	font-size: 1rem;
-	font-size: clamp(1rem, 0.95rem + 0.25vw, 1.5rem);
+	font-size: var(--s0);
+	font-size: clamp(var(--s0), 0.95rem + 0.25vw, var(--s4));
 }
