--- a/assets/styles/_tokens.scss
+++ b/assets/styles/_tokens.scss
@@ -1,4 +1,8 @@
 :root {
+	--midnight: #171d1a;
+
+	--grey-6: #808080;
+
 	--ratio: 1.25;
 	--s-5: calc(var(--s-4) / var(--ratio));
 	--s-4: calc(var(--s-3) / var(--ratio));
