--- a/assets/styles/_tokens.scss
+++ b/assets/styles/_tokens.scss
@@ -1,9 +1,12 @@
 :root {
 	--midnight: #171d1a;
+	--focus-white: #eceded;
+	--focus-yellow: #cce70b;
 
 	--grey-6: #808080;
 
 	--ratio: 1.25;
+	--s-6: calc(var(--s-5) / var(--ratio));
 	--s-5: calc(var(--s-4) / var(--ratio));
 	--s-4: calc(var(--s-3) / var(--ratio));
 	--s-3: calc(var(--s-2) / var(--ratio));
