--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -75,3 +75,13 @@ ol {
 	padding-inline-start: 1rem;
 	padding-inline-end: 1rem;
 }
+
+.visually-hidden {
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	height: 1px;
+	overflow: hidden;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+}
