--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -88,10 +88,25 @@ ol {
 
 h1 {
 	z-index: 10;
+	max-width: 11ch;
 	color: var(--focus-white);
 	font-weight: 700;
 	text-transform: uppercase;
+	position: relative;
 }
+
 h1 > span {
 	color: var(--focus-yellow);
+}
+
+h1::after {
+	content: '';
+	position: absolute;
+	z-index: 10;
+	margin-left: 0.1em;
+	bottom: 0.15em;
+	height: 1rem;
+	width: 1rem;
+	background-color: var(--focus-yellow);
+	border-radius: 4px;
 }
