--- a/assets/styles/_tokens.scss
+++ b/assets/styles/_tokens.scss
@@ -1,7 +1,9 @@
 :root {
 	--midnight: #171d1a;
 	--focus-white: #eceded;
+	--focus-white-light: rgba(237, 237, 237, 0.25);
 	--focus-yellow: #cce70b;
+	--focus-yellow-light: #e1f555;
 
 	--grey-6: #808080;
 
