--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -110,3 +110,31 @@ h1::after {
 	background-color: var(--focus-yellow);
 	border-radius: 4px;
 }
+
+.btn {
+	position: relative;
+	padding-inline: var(--s-1);
+	padding-block: var(--s-4);
+	border-radius: 4px;
+	text-transform: uppercase;
+	font-size: var(--s-1);
+	font-weight: 600;
+	text-decoration: none;
+	z-index: 10;
+
+	&-yellow {
+		background-color: var(--focus-yellow);
+	}
+	&-yellow:hover {
+		background-color: var(--focus-yellow-light);
+	}
+
+	&-outline {
+		color: var(--focus-white);
+		outline: var(--focus-white) solid 2px;
+		outline-offset: -2px;
+	}
+	&-outline:hover {
+		background-color: var(--focus-white-light);
+	}
+}
