--- a/assets/styles/_tokens.scss
+++ b/assets/styles/_tokens.scss
@@ -20,6 +20,10 @@
 	--s3: calc(var(--s2) * var(--ratio));
 	--s4: calc(var(--s3) * var(--ratio));
 	--s5: calc(var(--s4) * var(--ratio));
+	--s6: calc(var(--s5) * var(--ratio));
+	--s7: calc(var(--s6) * var(--ratio));
+	--s8: calc(var(--s7) * var(--ratio));
+	--s9: calc(var(--s8) * var(--ratio));
 }
 
 html {
