--- a/assets/css/tailwind.scss
+++ b/assets/css/tailwind.scss
@@ -77,7 +77,7 @@ ol {
 
 .container {
 	max-width: 1440px;
-	box-sizing: content-box;
+
 	margin-inline: auto;
 	padding-inline-start: 1rem;
 	padding-inline-end: 1rem;
@@ -126,6 +126,7 @@ h2 {
 	position: relative;
 	padding-bottom: 0.5rem;
 	text-transform: uppercase;
+	font-weight: 700;
 }
 
 h2::after {
