--- a/assets/css/tailwind.scss
+++ b/assets/css/tailwind.scss
@@ -30,11 +30,10 @@ h1 {
 h2 {
 	font-size: var(--s4);
 }
-h3 {
-	font-size: var(--s3);
-}
+
 h3 {
 	font-size: var(--s2);
+	font-weight: 700;
 }
 
 a {
