--- a/assets/css/tailwind.scss
+++ b/assets/css/tailwind.scss
@@ -175,3 +175,26 @@ h3 {
 		background-color: var(--focus-white-light);
 	}
 }
+
+.drawer-enter-active,
+.drawer-leave-active {
+	transition: 1s ease all;
+}
+.drawer-enter-from {
+	transform: translateX(-100%);
+}
+.drawer-leave-to {
+	transform: translateX(-100%);
+}
+
+// .drawer-enter-active .backprop,
+// .drawer-leave-active .backprop {
+// 	transition: 1s ease all;
+// }
+
+// .drawer-enter-from .backprop {
+// 	opacity: 0;
+// }
+// .drawer-leave-to .backprop {
+// 	opacity: 0;
+// }
