--- a/assets/css/_tokens.scss
+++ b/assets/css/_tokens.scss
@@ -6,6 +6,8 @@
 	--focus-yellow-light: #e1f555;
 
 	--grey-6: #808080;
+	--grey-4: #b3b3b3;
+	--grey-2: #e6e6e6;
 
 	--ratio: 1.25;
 	--s-8: calc(var(--s-7) / var(--ratio));
