--- a/assets/css/_reset.scss
+++ b/assets/css/_reset.scss
@@ -30,6 +30,7 @@ dd {
 /* Set core root defaults */
 html {
 	scroll-behavior: smooth;
+	scroll-padding-top: 50px;
 }
 
 /* Set core body defaults */
