--- a/assets/css/tailwind.scss
+++ b/assets/css/tailwind.scss
@@ -25,11 +25,21 @@ h3 {
 }
 
 h1 {
-	font-size: var(--s6);
+	font-size: var(--s5);
+}
+@media (min-width: 640px) {
+	h1 {
+		font-size: var(--s6);
+	}
+}
+@media (min-width: 1024px) {
+	h1 {
+		font-size: var(--s7);
+	}
 }
 
 h2 {
-	font-size: var(--s2);
+	font-size: var(--s3);
 	margin-bottom: 1em;
 }
 @media (min-width: 640px) {
@@ -39,7 +49,7 @@ h2 {
 }
 @media (min-width: 1024px) {
 	h2 {
-		font-size: var(--s6);
+		font-size: var(--s5);
 	}
 }
 
