--- a/assets/css/tailwind.scss
+++ b/assets/css/tailwind.scss
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @import './tokens';
 @import './reset';
 @import './forms';
@@ -9,11 +5,10 @@
 // Global CSS starts
 
 body {
-	--fk-max-width-input: 80rem;
 	line-height: 1.5;
 	padding-bottom: get-size('600');
 	font-family: 'Inter', sans-serif;
-	background-color: #fff;
+
 	min-height: 100vh;
 	position: relative;
 }
@@ -201,5 +196,10 @@ p {
 }
 
 .main {
-	@apply mt-8 space-y-40 md:space-y-60 lg:space-y-80;
+	@apply mt-8 space-y-20 md:space-y-40 lg:space-y-60;
+}
+
+.hero > * {
+	grid-column-start: unset;
+	grid-row-start: unset;
 }
